--- a/documentation/config-samples/supervisor/happy-days.conf
+++ b/documentation/config-samples/supervisor/happy-days.conf
@@ -1,12 +1,12 @@
 [program:welcome]
-directory=/home/epohs/Sites/welcome
+directory=[[domain_root]]
 # Production
-#command=/home/epohs/Sites/welcome/venv/bin/gunicorn hello:app -b localhost:8000
+#command=[[domain_root]]/venv/bin/gunicorn happy-days:app -b localhost:8000
 # Development
-command=/home/epohs/Sites/welcome/venv/bin/gunicorn hello:app -b localhost:8000 --reload
-user=epohs
+command=[[domain_root]]/venv/bin/gunicorn happy-days:app -b localhost:8000 --reload
+user=[[local_user]]
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/welcome/hello.err.log
-stdout_logfile=/var/log/welcome/hello.out.log
+stderr_logfile=/var/log/happy-days/hello.err.log
+stdout_logfile=/var/log/happy-days/hello.out.log
 
