--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Usage: pip install -r requirements.txt
 
 # Forms validation and rendering
-Flask-WTF>=0.14.2
+Flask-WTF>=0.14.3
 
 # Database ORM
 Flask-SQLAlchemy>=2.4.0
@@ -12,3 +12,6 @@ Flask-Migrate>=2.5.2
 
 # User session management
 Flask-Login>=0.4.1
+
+# Bundle and auto-minify assets
+Flask-Assets>=2.0
